# math-genealogy

./: .gitignore  LICENSE  README.md  cache_brazil_data.json  matematicos_brasil.csv  pyproject.toml
graph/: brazil_ids.txt
src/: main.py
utils/: credentials.py
