[tool.poetry]
name = "mathgenealogy-mo412"
version = "0.1.0"
description = ""
authors = ["pedro-rodrigues18 <hrpereira.pedro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
requests = "^2.32.5"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
